# quick-def

./: Cargo.toml
examples/: simple.rs
quick-def-macro/: Cargo.toml
quick-def-macro/src/: lib.rs
quick-default/: Cargo.toml
quick-default/quick-default-core/: Cargo.toml
quick-default/quick-default-core/src/: lib.rs
quick-default/quick-default-macro/: Cargo.toml
quick-default/quick-default-macro/src/: lib.rs
quick-default/quick-default-macro/tests/: default.rs
quick-default/src/: lib.rs
quick-deref/: Cargo.toml
quick-deref-core/: Cargo.toml
quick-deref-core/src/: lib.rs
quick-deref-macro/: Cargo.toml
quick-deref-macro/src/: lib.rs
quick-deref/quick-deref-core/: Cargo.toml
quick-deref/quick-deref-macro/: Cargo.toml
quick-deref/quick-deref-macro/tests/: deref_target.rs
quick-deref/src/: lib.rs
src/: lib.rs
tests/: deref_target.rs
