[package]
name = "quick-def"
authors = [
  "Herman Gohn"
]
edition = "2024"
version = "0.1.0"

[dependencies]
quick-default.workspace = true
quick-deref.workspace = true

[workspace]
package.authors = [
  "Herman Gohn"
]
package.edition = "2024"
package.version = "0.1.0"
members = [
  "quick-default/quick-default-*",
  "quick-default",

  "quick-deref/quick-deref-*",
  "quick-deref"
]
resolver = "3"
[workspace.dependencies]
darling = "0.20.10"
proc-macro2 = { version = "1.0.91" }
quote = { version = "1.0.38" }
syn = { version = "2.0.96", features = ["full"] }

quick-default-core = { path = "quick-default/quick-default-core", version = "*" }
quick-default-macro = { path = "quick-default/quick-default-macro", version = "*" }
quick-default = { path = "quick-default", version = "*" }

quick-deref-core = { path = "quick-deref/quick-deref-core", version = "*" }
quick-deref-macro = { path = "quick-deref/quick-deref-macro", version = "*" }
quick-deref = { path = "quick-deref", version = "*" }


